--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
