--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrations": "npx drizzle-kit generate:pg"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
+    "drizzle-orm": "^0.29.4",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
