--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
     "drizzle-orm": "^0.29.4",
+    "jose": "^5.2.2",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
