--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrations": "npx drizzle-kit generate:pg"
+    "migrations": "npx drizzle-kit generate:pg",
+    "generateKey": "npx tsx src/app/cli/generateKey.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
