--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
     "drizzle-orm": "^0.29.4",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "jose": "^5.2.2",
     "next": "14.1.1",
     "react": "^18",
@@ -21,11 +23,11 @@
     "tsx": "^4.7.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
